donation calculation function and success modal

--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
                 </div>
             </div>
 
+            <!-- Modal -->
+            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                <form method="dialog" class="modal-box grid  justify-items-center py-20">
+                    <img src="images/congo.png" alt="" class="mx-auot mb-10 ">
+                    <h3 class="font-bold text-5xl ">Congratulations</h3>
+                    <p class="py-4 text-xl">You Have Donated for Mankind</p>
+                    <div class="modal-action">
+                        <button id="cnfm" class="btn border rounded-md bg-pink-600 text-white px-8 pt-2 pb-2 text-xl mx-auto">Close</button>
+                    </div>
+                </form>
+            </dialog>
         </div>
 
         <div id="history-tab" class="border hidden">
